# Neobis_E-Store_project

./: pyproject.toml
e_store/e_store/: asgi.py  settings.py  urls.py  wsgi.py
e_store/feedbacks/: endpoints.py  models.py  serializers.py  urls.py
e_store/feedbacks/migrations/: 0001_initial.py
e_store/orders/: endpoints.py  models.py  serializers.py  urls.py
e_store/orders/migrations/: 0001_initial.py
e_store/products/: endpoints.py  models.py  serializers.py  urls.py
e_store/products/migrations/: 0001_initial.py
e_store/users/: endpoints.py  models.py  serializers.py  urls.py
e_store/users/migrations/: 0001_initial.py
