[tool.poetry]
name = "e-store"
version = "0.1.0"
description = ""
authors = ["Pavel Ivanov <pavel.ivanov.060988@gmail.com>"]
readme = "README.md"
packages = [{include = "e_store"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
